--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,5 @@ dependencies {
     implementation "androidx.room:room-ktx:2.2.5"
     kapt 'androidx.room:room-compiler:2.2.5'
 
+    implementation 'com.facebook.fresco:fresco:2.3.0'
 }
